--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "saas": "^1.0.0",
+    "sass": "^1.67.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
